include(GoogleTest)

function(add_base_test test_name)
  add_executable(${test_name} ${ARGN})
  target_link_libraries(${test_name} muduo_base GTest::gtest_main)
  gtest_discover_tests(${test_name})
endfunction()

function(add_base_bench bench_name)
  add_executable(${bench_name} ${ARGN})
  target_link_libraries(${bench_name} muduo_base benchmark::benchmark_main)
endfunction()

add_base_test(blockingqueue_test BlockingQueue_test.cc)
add_base_test(date_test Date_test.cc)
add_base_test(timestamp_test Timestamp_test.cc)
add_base_test(thread_test Thread_test.cc)
add_base_test(threadpool_test ThreadPool_test.cc)
add_base_test(fileutil_test FileUtil_test.cc)
add_base_test(logstream_test LogStream_test.cc)
add_base_test(exception_test Exception_test.cc)
add_base_test(currentthread_test CurrentThread_test.cc)
add_base_test(singleton_test Singleton_test.cc)
add_base_test(threadlocalsingleton_test ThreadLocalSingleton_test.cc)
add_base_test(weakcallback_test WeakCallback_test.cc)
add_base_test(processinfo_test ProcessInfo_test.cc)
add_base_test(timezone_test TimeZone_test.cc)
add_base_test(logging_test Logging_test.cc)
add_base_test(logfile_test LogFile_test.cc)
add_base_test(asynclogging_test AsyncLogging_test.cc)
add_base_test(fork_test Fork_test.cc)
add_base_test(types_test Types_test.cc)
add_base_test(stringpiece_test StringPiece_test.cc)
add_base_test(gzipfile_test GzipFile_test.cc)

add_base_bench(logstream_bench LogStream_bench.cc)
add_base_bench(logging_bench Logging_bench.cc)
add_base_bench(threadpool_bench ThreadPool_bench.cc)
add_base_bench(blockingqueue_bench BlockingQueue_bench.cc)
add_base_bench(thread_bench Thread_bench.cc)
